--- a/typeidea/typeidea/typeidea/templates/blog/list.html
+++ b/typeidea/typeidea/typeidea/templates/blog/list.html
@@ -1,3 +1,11 @@
+{% if tag %}
+    标签页： {{ tag.name }}
+{% endif %}
+
+{% if category %}
+    分类页： {{ category.name }}
+{% endif %}
+
 <ul>
     {% for post in post_list %}
     <li>
@@ -5,8 +13,13 @@
         <div>
         <span>作者：{{ post.owner.username }}</span>
         <span>分类：{{ post.category.name }}</span>
+        <span>标签： {% for tag in post.tags.all %}
+                        <b>{{ tag.name }}</b>
+                    {% endfor %}
+        </span>
         </div>
-        <p>{{ post.description }}</p>
+        <p>{{ post.description }} - {{ post.created_time }}</p>
+
     </li>
     {% endfor %}
 </ul>
